--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,7 @@
         </div>
       </div>
 
-      <div class="col-md-7">
+      <div class="col-md-7 content">
         {{ content }}
       </div>
     </div>
