--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -7,8 +7,7 @@
     {% include header.html %}
 
     <div class="row">
-      <div class="col-lg-2"></div>
-      <div class="col-lg-8 article">
+      <div class="col-lg-7 mx-auto content">
         {{ content }}
       </div>
     </div>
