--- a/assets/styles.css
+++ b/assets/styles.css
@@ -16,7 +16,11 @@ body, html {
   }
 }
 
-.article img {
+.content {
+  font-size: 110%;
+}
+
+.content img {
   display: block;
   margin-left: auto;
   margin-right: auto;
