--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="row mb-3 text-center">
-  <div class="col">
+  <div class="col header">
     <a class="mx-3" href="/">Home</a>
     <a class="mx-3" href="/articles">Articles</a>
     <a class="mx-3" href="/courses">Courses</a>
