--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,26 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <meta property="og:title" content="{{ page.title }}">
+  <meta name="twitter:title" content="{{ page.title }}">
+  
+  <meta name="twitter:site" content="@Al_Grigor">
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <meta property="og:locale" content="en_US">
+  
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Machine Learning Bookcamp">
+  <meta property="og:url" content="{{ site.url }}{{ page.url }}">
+  <link rel="canonical" href="{{ site.url }}{{ page.url }}">
+  
+  <meta property="og:image" content="{{ site.url }}/{{ page.image }}">
+  <meta property="twitter:image" content="{{ site.url }}/{{ page.image }}">
+  <link rel="image_src" href="{{ site.url }}/{{ page.image }}">
+
+  <meta property="og:description" content="{{ page.description }}">
+  <meta name="twitter:description" content="{{ page.description }}">
+  
   <title>{{ page.title }}</title>
 
   <link rel="stylesheet"
