--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,29 +1,29 @@
 <head>
-  <!-- Required meta tags -->
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <meta property="og:title" content="{{ page.title }}">
-  <meta name="twitter:title" content="{{ page.title }}">
-  
-  <meta name="twitter:site" content="@Al_Grigor">
-  <meta name="twitter:card" content="summary_large_image" />
-
   <meta property="og:locale" content="en_US">
-  
+
+  <title>{{ page.title }}</title>
+  <meta property="og:title" content="{{ page.title }}">
+  <meta property="twitter:title" content="{{ page.title }}">
+  <meta name="title" content="{{ page.title }}">
+
+  <meta property="twitter:site" content="@Al_Grigor">
+  <meta property="twitter:card" content="summary_large_image" />
+
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Machine Learning Bookcamp">
   <meta property="og:url" content="{{ site.url }}{{ page.url }}">
   <link rel="canonical" href="{{ site.url }}{{ page.url }}">
-  
+
   <meta property="og:image" content="{{ site.url }}/{{ page.image }}">
   <meta property="twitter:image" content="{{ site.url }}/{{ page.image }}">
   <link rel="image_src" href="{{ site.url }}/{{ page.image }}">
 
   <meta property="og:description" content="{{ page.description }}">
-  <meta name="twitter:description" content="{{ page.description }}">
-  
-  <title>{{ page.title }}</title>
+  <meta property="twitter:description" content="{{ page.description }}">
+  <meta name="description" content="{{ page.description }}">
 
   <link rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
