--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -9,6 +9,19 @@
     <div class="row">
       <div class="col-lg-8 mx-auto content">
         {{ content }}
+
+        <div class="article-divider"></div>
+
+        <div class="article-end">
+          <p>
+            This article is based on the content from Machine Learning Bookcamp. Learn machine learning
+            by doing projects and get the skills needed to work as a data scientist or machine learning engineer.
+            <a href="/">Learn more about the book</a>.
+          </p>
+          <p>To stay informed about new content on this site and book updates, join our newsletter</p>
+
+          {% include subscribe.html %}
+        </div>
       </div>
     </div>
 
