--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@
     <div class="row">
       <div class="col-md-3 text-center book-cover">
         <div>
-          <a href="http://bit.ly/mlbookcamp">
+          <a href="http://bit.ly/mlbookcamp" target="_blank">
             <img src="img/mlbookcamp-cover-small.jpg" class="img-cover img-fluid"/>
           </a>
         </div>
