--- a/previews/styles.css
+++ b/previews/styles.css
@@ -34,10 +34,12 @@ h4 {
 }
 
 #main {
-  background-image: url('923.jpg');
+  /* background-image: url('radial.png');
   background-size: 120%;
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
+  background: rgb(251,243,63);
+  background: radial-gradient(circle, rgba(251,243,63,0.680062454737974) 0%, rgba(252,171,70,1) 100%);
   text-align: center;
   width: 940px;
   height: 550px;
