--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -14,8 +14,9 @@
 
         <div class="article-end">
           <p>
-            This article is based on the content from Machine Learning Bookcamp. Learn machine learning
-            by doing projects and get the skills needed to work as a data scientist or machine learning engineer.
+            This content on this site is based on the materials from Machine Learning Bookcamp. 
+            Machine Learning Bookcamp: learn machine learning by doing projects and get the skills
+            needed to work as a data scientist or machine learning engineer.
             <a href="/">Learn more about the book</a>.
           </p>
           <p>To stay informed about new content on this site and book updates, join our newsletter</p>
