--- a/assets/styles.css
+++ b/assets/styles.css
@@ -48,3 +48,12 @@ body, html {
   margin-top: 0em;
   margin-bottom: 1em;
 }
+
+.presentation {
+  border: 1px solid #CCC;
+  border-width: 1px;
+  margin-bottom:5px;
+  max-width: 100%;
+  display: block;
+  margin: 0 auto;
+}
