--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -14,7 +14,7 @@
 
         <div class="article-end">
           <p>
-            This content on this site is based on the materials from Machine Learning Bookcamp. 
+            The content on this site is based on the materials from Machine Learning Bookcamp. 
             Machine Learning Bookcamp: learn machine learning by doing projects and get the skills
             needed to work as a data scientist or machine learning engineer.
             <a href="/">Learn more about the book</a>.
