link to manning at the bottom

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -17,7 +17,7 @@
             The content on this site is based on the materials from Machine Learning Bookcamp. 
             Machine Learning Bookcamp: learn machine learning by doing projects and get the skills
             needed to work as a data scientist or machine learning engineer.
-            <a href="/">Learn more about the book</a>.
+            <a href="http://bit.ly/mlbookcamp">Learn more about the book</a>.
           </p>
           <p>To stay informed about new content on this site and book updates, join our newsletter</p>
 
