--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <hr />
     <div>
       Machine Learning Bookcamp. 
-      Hosted on <a href="https://github.com/alexeygrigorev/mlbookcamp-page">GitHub Pages</a>
+      Hosted on <a href="https://github.com/alexeygrigorev/mlbookcamp-page" target="_blank">GitHub Pages</a>
     </div>
   </div>
 </div>
