--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -8,7 +8,25 @@
 
     <div class="row">
       <div class="col-lg-8 mx-auto content">
-        {{ content }}
+
+        <div class="content-head d-flex justify-content-between align-items-center">
+          <div>
+            <h1>{{ page.title }}</h1>
+          </div>
+          <div>
+            <div class="social">
+              <a target="_blank" 
+                title="Tweet it!"
+                href="https://twitter.com/intent/tweet?text={{ page.title | erl_encode }}{{ " by @Al_Grigor " | url_encode }}{{ page.url | absolute_url | url_encode }}">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="content-main">
+          {{ content }}
+        </div>
 
         <div class="article-divider"></div>
 
